--- a/Spec.Sniffer/Properties/Resources.resx
+++ b/Spec.Sniffer/Properties/Resources.resx
@@ -124,6 +124,9 @@
   <data name="DeviceStatus" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\DeviceStatus.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="DriversError" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\DriversError.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="Ethernet" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Ethernet.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
