--- a/Spec.Sniffer/Properties/Resources.resx
+++ b/Spec.Sniffer/Properties/Resources.resx
@@ -163,6 +163,9 @@
   <data name="speakersOn" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\speakersOn.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Spec" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Spec.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="unallocated" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\unallocated.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
